@@ -1,3 +1,6 @@
+* Fill values of floating point types are now explicitly set to NaN when
+  exporting to a netcdf or hdf5 file.
+
 1.20.1 2023-10-12
 ~~~~~~~~~~~~~~~~~
 
